name:                  clang-lens
version:               0.1.0.0
synopsis:              Pure read-only bindings to libclang
description:           Pure read-only bindings to libclang
license:               Apache-2.0
license-file:          LICENSE
author:                Patrick Chilton
maintainer:            chpatrick@gmail.com
copyright:             Copyright 2014 Google Inc. All Rights Reserved.
category:              Language
build-type:            Simple
-- extra-source-files:  
cabal-version:         >=1.10

library
  exposed-modules:     Clang
  other-modules:       Clang.Refs, Clang.Types, Clang.FFI
  extensions:          TypeFamilies, GeneralizedNewtypeDeriving, TemplateHaskell, QuasiQuotes, OverloadedStrings
  build-depends:       base >=4.8 && <4.9,
                       lens,
                       inline-c >= 0.5.3.2,
                       containers >= 0.5.6.2,
                       template-haskell >= 2.10,
                       vector >= 0.10.12,
                       bytestring >= 0.10.6,
                       stm >= 2.4.4
  hs-source-dirs:      src/
  build-tools:         hsc2hs
  default-language:    Haskell2010
  c-sources:           src/Clang/FFI.c
  include-dirs:        /usr/lib/llvm-3.4/include
  cc-options:          -Wall
  ld-options:          -lclang-3.4
  extra-libraries:     clang-3.4
  ghc-options:         -Wall

-- executable test
--  main-is: test.hs
--  build-depends: base >= 4.8, clang-lens, containers, lens, inline-c >= 0.5.3.2, template-haskell >= 2.10, vector >= 0.10.12, bytestring >= 0.10.6
