name:                  clang-pure
version:               0.1.0.0
synopsis:              Pure C++ code analysis with libclang
description:
  Pure C++ code analysis with libclang.
  .
  Refer to <http://clang.llvm.org/doxygen/group__CINDEX.html libclang's documentation> for usage.
  In general, the naming scheme is @clang_getCursorType -> cursorType@, @CXCursor -> `Cursor`@.
license:               Apache-2.0
license-file:          LICENSE
author:                Patrick Chilton
maintainer:            chpatrick@gmail.com
copyright:             Copyright 2014 Google Inc. All Rights Reserved.
category:              Language
build-type:            Simple
-- extra-source-files:  
cabal-version:         >=1.10
extra-source-files:  cbits/utils.h

source-repository head
  type: git
  location: https://github.com/chpatrick/clang-pure.git

library
  exposed-modules:     Language.C.Clang,
                       Language.C.Clang.Cursor,
                       Language.C.Clang.File,
                       Language.C.Clang.Location,
                       Language.C.Clang.Token,
                       Language.C.Clang.TranslationUnit,
                       Language.C.Clang.Type
  other-modules:       Language.C.Clang.Internal.Context,
                       Language.C.Clang.Internal.FFI,
                       Language.C.Clang.Internal.Refs,
                       Language.C.Clang.Internal.Types
  default-extensions:  TypeFamilies,
                       GeneralizedNewtypeDeriving,
                       TemplateHaskell,
                       QuasiQuotes,
                       OverloadedStrings,
                       LambdaCase,
                       NamedFieldPuns,
                       StandaloneDeriving,
                       FlexibleContexts
  build-depends:       base >=4.8 && <4.9,
                       contravariant >= 1.3.3,
                       inline-c >= 0.5.3.2,
                       containers >= 0.5.6.2,
                       template-haskell >= 2.10,
                       vector >= 0.10.12,
                       bytestring >= 0.10.6,
                       stm >= 2.4.4
  hs-source-dirs:      src/
  build-tools:         hsc2hs
  default-language:    Haskell2010
  c-sources:           src/Language/C/Clang/Internal/FFI.c
  include-dirs:        cbits/
  cc-options:          -Wall
  extra-libraries:     clang
  ghc-options:         -Wall -O2